# cc13xx-cmake

./: .gitmodules  LICENSE.md  README.md
cmake/: FindSimpleLinkCC13X0SDK.cmake  FindXdctools.cmake  cc13xx.cmake  toolchain-arm-none-eabi.cmake
src/uartecho/: Board.h  CC1310_LAUNCHXL.c  CC1310_LAUNCHXL.h  CMakeLists.txt  README.html  README.md  uartecho.c
src/uartecho/tirtos/ccs/: makefile  uartecho_CC1310_LAUNCHXL_tirtos_ccs.projectspec
src/uartecho/tirtos/gcc/: CC1310_LAUNCHXL_TIRTOS.lds  makefile  uartecho_CC1310_LAUNCHXL_tirtos_gcc.projectspec
src/uartecho/tirtos/iar/: makefile  uartecho.ewp  uartecho.eww  uartecho.ipcf
